fix(battle): adjust padding in battle component for improved layout on smaller screens

--- a/src/app/features/battle/battle-controls/battle-controls.component.scss
+++ b/src/app/features/battle/battle-controls/battle-controls.component.scss
@@ -70,6 +70,10 @@
     gap: 10px;
     padding-right: 18px;
 
+    ::ng-deep .p-button {
+      padding: 8px 20px !important;
+    }
+
     ::ng-deep .control-buttons,
     ::ng-deep .p-button-label {
       display: none !important;
@@ -100,5 +104,13 @@
 @media (max-width: 480px) {
   .control-buttons {
     padding-right: 12px;
+  }
+}
+
+@media (max-width: 390px) {
+  .control-buttons {
+    ::ng-deep .p-button {
+      padding: 8px !important;
+    }
   }
 }
