--- a/src/app/features/battle/battle.component.scss
+++ b/src/app/features/battle/battle.component.scss
@@ -52,7 +52,7 @@
     flex-direction: column-reverse;
     gap: 10px;
     height: 100%;
-    padding: 10px 10px 80px 10px;
+    padding: 10px 10px 60px 10px;
   }
 }
 
@@ -63,7 +63,7 @@
   }
 
   .battle-overlay {
-    padding: 8px 8px 80px 8px;
+    padding: 8px 8px 60px 8px;
     gap: 8px;
   }
 }
